src/test/ui/error-codes/E0260.stderr
error[E0260]: the name `alloc` is defined multiple times
  --> $DIR/E0260.rs:5:1
   |
LL | extern crate alloc;
   | ------------------- previous import of the extern crate `alloc` here
LL | 
LL | mod alloc {
   | ^^^^^^^^^ `alloc` redefined here
   |
   = note: `alloc` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | extern crate alloc as other_alloc;
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0260`.
